# Proyecto-Mpointers-

./: CmakeLists.txt  README.md
MemoryManager/: CMakeLists.txt
MemoryManager/src/: GarbageCollector.h  MemoryManager.cpp  MemoryManager.h  SocketServer.cpp  SocketServer.h  main.cpp
Mpointer/: CMakeLists.txt
Mpointer/src/: MPointer.cpp  MPointer.h  main.cpp
src/memory_manager/: GarbageCollector.cpp  MemoryManager.cpp
